--- a/.env
+++ b/.env
@@ -22,12 +22,12 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=auth
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 DB_COLLATION=utf8mb4_unicode_ci
 
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
